--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@stripe/stripe-js": "^1.13.2",
     "next": "10.0.9",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "^4.2.0"
   }
 }
